kubernetes/hello-socat/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: debug
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: hello-xyz.example.loodse.training
    http:
      paths:
      - backend:
          serviceName: hello-svc
          servicePort: http
        path: /
